cli/tests/testdata/test/doc.out
Check [WILDCARD]/doc.ts$2-5.ts
Check [WILDCARD]/doc.ts$6-9.js
Check [WILDCARD]/doc.ts$10-13.jsx
Check [WILDCARD]/doc.ts$14-17.ts
Check [WILDCARD]/doc.ts$18-21.tsx
Check [WILDCARD]/doc.ts$30-35.ts
error: TS2367 [ERROR]: This condition will always return 'false' since the types 'string' and 'number' have no overlap.
console.assert(check() == 42);
               ~~~~~~~~~~~~~
    at [WILDCARD]/doc.ts$30-35.ts:3:16
