cli/tests/testdata/test/doc.ts
/**
 * ```
 * import * as doc from "./doc.ts";
 * ```
 *
 * ```js
 * import * as doc from "./doc.ts";
 * ```
 *
 * ```jsx
 * import * as doc from "./doc.ts";
 * ```
 *
 * ```ts
 * import * as doc from "./doc.ts";
 * ```
 *
 * ```tsx
 * import * as doc from "./doc.ts";
 * ```
 *
 * ```text
 * import * as doc from "./doc.ts";
 * ```
 *
 * @module doc
 */

/**
 * ```
 * import { check } from "./doc.ts";
 *
 * console.assert(check() == 42);
 * ```
 */
export function check(): string {
  return "check";
}
